<resources>
    <string name="app_name">Amido</string>
    <string name="action_settings">Settings</string>
    <string name="action_list">Character list</string>
    <string name="title_activity_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="character_view_strokes_count">%d strokes</string>
    <string name="details_character">Character</string>
    <string name="details_pronunciation">Pronunciation</string>
    <string name="details_pinyin">Pinyin</string>
    <string name="details_english">English</string>
    <string name="details_german">German</string>
    <string name="draw_clear">Clear</string>
    <string name="draw_ok">Ok</string>
    <string name="search_answer_format">%1$s - %2$s </string>
    <string name="action_draw">Draw</string>
    <string name="action_search">Search</string>
    <string name="action_learn">Learn</string>
    <string name="title_activity_draw">Draw</string>
    <string name="title_activity_search">Search</string>
    <string name="draw_answer_format">%1$s - %2$s - %3$s</string>
    <string name="draw_delete_stroke">Delete stroke</string>
    <string name="draw_auto_clear">will automatically clear</string>
    <string name="title_activity_learn">Learn</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_ok">Ok</string>
    <string name="button_learn_draw">Draw</string>
    <string name="button_learn_show">Teach me!</string>
    <string name="title_activity_learn_range_selection">Range</string>
    <string name="title_activity_learn_draw">Learn / Draw</string>
    <string name="pronunciation">Pronunciation</string>
    <string name="pinyin">Pinyin</string>
    <string name="translation">Translation</string>
    <string name="learn_draw_correct">correct - %1$s - %2$s</string>
    <string name="learn_draw_wrong">wrong - %s</string>
    <string name="learn_draw_status">%1$d of %2$d done</string>
    <string name="learn_done">Congratulations, you\'re done!</string>
    <string name="title_activity_learn_done">Done</string>
    <string name="title_activity_learn_show">Teaching</string>
    <string name="title_activity_learn_flash">Flash</string>
    <string name="language">en</string>
    <string name="search_nothing">No characters found matching \"%s\".</string>
    <string name="draw_nothing">Does not match any character.</string>
    <string name="details_id">Id</string>
    <string name="date_today">today</string>
    <string name="date_yesterday">yesterday</string>
    <string name="date_days_ago">%d days ago</string>
    <string name="button_show_last">Show last character</string>
    <string name="date_hours_ago">%d hours ago</string>
    <string name="button_add_to_list">Add to list...</string>
    <string name="button_edit">Edit</string>
    <string name="draw_answer_format_per">%1$s - %2$s - %3$d%%</string>
    <string name="learn_draw_correct_per">correct - %1$s - %2$d%%</string>
    <string name="title_activity_settings">Settings</string>
    <string name="kana_checkbox">Show kana</string>
    <string name="admin_checkbox">Administrator mode</string>
    <string name="learn_show_count">Characters to teach</string>
    <string name="learn_draw_count">Characters to draw</string>
    <string name="learn_question_quit">Do you really want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="learn_count">You\'ve learned %d characters.</string>
    <string name="button_learn_flash">Flash</string>
    <string name="sync_user_name">User name (for sync)</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_list">List</string>
</resources>
