<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michi.amido.LearnShowActivity"
    tools:showIn="@layout/activity_learn_show">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/pronunciation"
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/pronunciation"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_large_material" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/translation"
                    android:id="@+id/textView5"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/translation"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_large_material" />
            </TableRow>
        </TableLayout>

        <com.example.michi.amido.CharacterView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_clear"
                android:id="@+id/button_clear"
                android:layout_gravity="center_horizontal"
                android:onClick="onClearButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_delete_stroke"
                android:id="@+id/button_undo"
                android:layout_gravity="center_horizontal"
                android:onClick="onDeleteStrokeButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_revert" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_ok"
                android:id="@+id/button_ok"
                android:layout_gravity="center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_send"
                android:onClick="onOkButton" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=""
            android:id="@+id/status"
            android:layout_column="0"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            android:textSize="@dimen/abc_text_size_medium_material" />

    </LinearLayout>

</RelativeLayout>
