<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michi.amido.DrawActivity"
    tools:showIn="@layout/activity_draw">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.michi.amido.CharacterView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_clear"
                android:id="@+id/button_clear"
                android:layout_gravity="center_horizontal"
                android:onClick="onClearButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_delete_stroke"
                android:id="@+id/button_undo"
                android:layout_gravity="center_horizontal"
                android:onClick="onDeleteStrokeButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_revert" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_ok"
                android:id="@+id/button_ok"
                android:layout_gravity="center_horizontal"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_search"
                android:onClick="onOkButton" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer_list"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
