<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.michi.amido.EditActivity"
    tools:showIn="@layout/activity_edit">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_character"
                    android:id="@+id/textView"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="X"
                    android:id="@+id/character"
                    android:layout_column="1"
                    android:textSize="@dimen/notification_large_icon_height" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_pronunciation"
                    android:id="@+id/textView3"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/pronunciation"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_pinyin"
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/pinyin"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_id"
                    android:id="@+id/textView13"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/id"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_english"
                    android:id="@+id/textView5"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/english"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_german"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/german"
                    android:layout_column="1" />
            </TableRow>
        </TableLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_clear"
                android:id="@+id/button_clear"
                android:layout_gravity="center_horizontal"
                android:onClick="onClearButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_close_clear_cancel" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_delete_stroke"
                android:id="@+id/button_undo"
                android:layout_gravity="center_horizontal"
                android:onClick="onDeleteStrokeButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_menu_revert" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/button_prev"
                android:layout_gravity="center_horizontal"
                android:onClick="onPreviousButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_media_previous" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/button_next"
                android:layout_gravity="center_horizontal"
                android:onClick="onNextButton"
                style="?android:attr/borderlessButtonStyle"
                android:src="@android:drawable/ic_media_next" />

        </LinearLayout>

            <com.example.michi.amido.CharacterView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_edit"/>

</android.support.constraint.ConstraintLayout>
