<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailsActivity"
    tools:showIn="@layout/activity_details">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_character"
                    android:id="@+id/textView"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="X"
                    android:id="@+id/character"
                    android:layout_column="1"
                    android:textSize="@dimen/notification_large_icon_height" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_pronunciation"
                    android:id="@+id/textView3"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/pronunciation"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:breakStrategy="balanced" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_pinyin"
                    android:id="@+id/textView4"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/pinyin"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:breakStrategy="balanced" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_id"
                    android:id="@+id/textView13"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/id"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_english"
                    android:id="@+id/textView5"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/english"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:breakStrategy="balanced" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/details_german"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/german"
                    android:layout_column="1"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:breakStrategy="balanced" />
            </TableRow>
        </TableLayout>

        <com.example.michi.amido.CharacterView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/view2"
            android:layout_column="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_to_list"
            android:onClick="onAddToListButton"
            android:id="@+id/button_add_to_list" />
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_edit"/>
</RelativeLayout>

